correction affichage site description iphone

--- a/code/wp-content/themes/quebecnumerique/style.less
+++ b/code/wp-content/themes/quebecnumerique/style.less
@@ -2783,9 +2783,7 @@ hr.for-responsive{display: none;}
 		}
 
 		.group.related-posts .c3 { width: 100%; }
-
 		.coordonees a { font-size: 1.3em;}
-
 		.ajax-load-more-wrap.white button.alm-load-more-btn{ font-size: 0.9em; }
 	}
 
@@ -2796,13 +2794,13 @@ hr.for-responsive{display: none;}
 		.site-description { left: 10em; }
 		.navigation .principal#menu-principal { font-size: 65%; }
 		.img-box .content { font-size: 120%; }
-		.equipe .c3{width: 99.99%;}
+		.equipe .c3 {width: 99.99%;}
+		.site-description { display: none; }
 	}
 
 	@media screen and (max-width: 479px){
-		.home-link { font-size: 65%; }
-		.navigation .meta { margin-left: 8em; }
-		.site-description { left: 8em; }
+		.home-link { font-size: 55%; }
+		.navigation .meta { margin-left: 9em; }
 	}
 
 
